# dotfiles

./: .gitignore  .tmux.conf  README.md
alacritty/: alacritty.toml
configs/fd/: ignore
dotfiles/: .gitconfig  .luarc.json  .zshrc  Mason.installed  brew_filelist  diff_files.py  init.lua  init.vim  kitty.conf  lazy-lock.json  starship.toml  to_csv.py
dotfiles/.aws/: credentials
dotfiles/.pip/: pip.conf
dotfiles/Archive/: init.vim
dotfiles/kitty/: current-theme.conf  kitty.conf
dotfiles/lua/: keys.lua  lsp.lua  lsp_config.lua  nvim_neo_tree.lua  opts.lua  plugins.lua  vars.lua  window_picker.lua
dotfiles/nvim/: lazy-lock.json  to_csv.py  update_json.py
dotfiles/plugin/: packer_compiled.lua
dotfiles/spell/: en.utf-8.add  en.utf-8.add.spl
dots/: .gitconfig  .gitignore  .tmux.conf  .zshrc  shell-common.sh  tmux.conf
kitty/: kitty.conf
nvim/: .editorconfig  .luarc.json  init.lua  install_parsers.lua  lazy-lock.json  nvim-pack-lock.json  update_plugins.sh
nvim/colors/: ziggy.vim
nvim/ftplugin/: gitcommit.lua  go.lua  json.lua  netrw.vim  pest.lua  python.lua  rust.lua  toml.lua  undotree.lua
nvim/lsp/: basedpyright.lua  bashls.lua  buf_ls.lua  docker_compose_language_service.lua  dockerls.lua  harper_ls.lua  jsonls.lua  lua_ls.lua  (+6 more)
old_nvim/: .luarc.json  lazy-lock.json
py_template/: .pre-commit-config.yaml  Makefile  Pipfile  README.md
rust_template/: Cargo.toml  Makefile  README.md  pyproject.toml
rust_template/.cargo/: config.toml
scripts/: bootstrap-debian.sh  gendate  nanos_to_dt  nvim-setup  nvim-setup.sh
vscode/: extension_list
(+165 files in other folders)
